# Credit-card-fraud-detection

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
configs/: base.yaml  thresholds.yaml
fraud/: app.py  dashboard.py  genai_service.py  test_manual.py  test_sensitivity.py  train_pro.py  train_real.py
scripts/: export_topk.py  install_pyarrow.ps1  run_dashboard.sh  run_eval.sh  run_streamlit.ps1  run_train.sh  self_check.py  serve_api.sh  serve_probe_score.ps1
src/: data.py  drift.py  evaluate.py  features.py  metrics.py  threshold.py  train.py  utils.py
src/dashboard/: app.backup.py  app.py
src/service/: app.py
tests/: test_inference.py  test_metrics.py  test_split_leakage.py
