[project]
name = "fraud-detection"
version = "0.1.0"
description = "End-to-end credit card fraud detection system."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501"] # let black handle line length

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
